# HackerExperience

./: .tool-versions  LICENSE  README.md
.github/workflows/: helix.yaml  hexOS.yaml  sdk.yaml
helix/: .env  .formatter.exs  .gitignore  mix.exs
helix/config/: config.exs  dev.exs  runtime.exs  test.exs
helix/lib/: application.ex  db.ex
helix/lib/core/: core.ex  endpoint.ex  event.ex  fetch.ex  helix.ex  henforcer.ex  id.ex  metrics.ex  nip.ex  schema.ex  spec.ex  supervisor.ex  telemetry.ex
helix/lib/db/: README.md  boot.ex  migrator.ex  mod.ex  query.ex  repo.ex  schema.ex  sqlite.ex  supervisor.ex  type.ex  value.ex
helix/lib/game/: webserver.ex
helix/lib/hell/: random.ex
helix/native/argon2/: Cargo.toml
helix/native/argon2/src/: argon2.rs
helix/priv/: feebdb_schemas.json
helix/test/: application_test.exs  test_helper.exs
hexOS/: .gitignore  elm.json  format_openapi_spec.exs  package-lock.json  package.json  vite.config.js
hexOS/review/: elm.json  run_ci.sh  run_dev.sh
hexOS/src/: Boot.elm  Effect.elm  Event.elm  Game.elm  HUD.elm  Login.elm  Main.elm  OS.elm  Ports.elm  State.elm  UI.elm  Utils.elm  WM.elm  index.html  index.js
hexOS/tests/: GameTest.elm  LoginTest.elm  OSTest.elm  Program.elm  Simulator.elm  StateTest.elm  setup.sh
infra/dev/: docker-compose.yml
lobby/: mix.exs
lobby/config/: config.exs  runtime.exs
lobby/lib/: application.ex  webserver.ex
notes/: auth.md  events.md  logs.md  network.md  open_api.md  processes.md
renatils/: mix.exs
webserver/: mix.exs
webserver/lib/: conveyor.ex  vaqueiro.ex
(+549 files in other folders)
